<resources>
    <string name="app_name">SwinClubEventManagementApplication</string>
    <string name="login">Login</string>
    <string name="committee_member">Committee Member</string>
    <string name="student">Student</string>
    <string name="swinburnelogo">SwinburneLogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="doest_not_have_an_account_sign_up_now">Doest Not have an account? Sign up now</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>