<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey"
    android:padding="20dp">

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="Login"-->
<!--        android:textColor="@color/dark_black"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/emailTil"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/passwordTil"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_marginBottom="10dp">-->

<!--        <EditText-->
<!--            android:id="@+id/emailEt"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Email"-->
<!--            android:inputType="textEmailAddress" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/passwordTil"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <EditText-->
<!--            android:id="@+id/passwordEt"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Password"-->
<!--            android:inputType="textPassword" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <Button-->
<!--        android:id="@+id/buttonLogin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Login"-->
<!--        android:layout_marginBottom="200dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textViewNoAcc"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/textViewNoAcc"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Not have account? Sign up now"-->
<!--        android:textColor="@color/light_blue"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/dark_black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginTitle"
        app:srcCompat="@drawable/mobile_login"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewAppLogo"
        android:layout_width="68dp"
        android:layout_height="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginTitle"
        app:srcCompat="@drawable/swinburnelogo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/buttonCommitteeMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/committee_member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStudent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

    <Button
        android:id="@+id/buttonStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCommitteeMember"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>